# vbgs

./: .gitignore  LICENSE.txt  README.md  install_deps.sh  pyproject.toml
scripts/: convert_models.py  create_initial_replica_clouds.py  estimate_depth.py  evaluate_models.py  habitat_to_blender.py  model_image.py  model_volume.py  render_volume.ipynb  render_volume.py  replica_to_blender.py  train_depth_splatam.py  train_idcs.json  train_image.py  train_image_continual.py  train_image_gradient.py  train_objects.py  train_replica.py  train_rooms.py  train_tum.py  tum_to_blender.py
scripts/configs/: blender.yaml  gradient_imagenet.yaml  habitat.yaml  imagenet.yaml  replica.yaml  splatam.yaml  splatam_depth.yaml  splatam_est.yaml  tum.yaml
vbgs/: __init__.py  camera.py  finetune.py  gicp.py  metrics.py  render.py
vbgs/data/: __init__.py  blender.py  depth.py  habitat.py  image.py  replica.py  utils.py
vbgs/model/: __init__.py  baseline.py  model.py  reassign.py  train.py  utils.py
vbgs/render/: __init__.py  image.py  volume.py
vbgs/vi/: __init__.py  distribution.py
vbgs/vi/conjugate/: base.py  multinomial.py  mvn.py
vbgs/vi/exponential/: __init__.py  base.py  multinomial.py  mvn.py
vbgs/vi/models/: __init__.py  base.py  mixture.py
vbgs/vi/utils/: __init__.py  math.py  pytree.py
